--- a/app/src/main/res/layout/activity_escanear_placa.xml
+++ b/app/src/main/res/layout/activity_escanear_placa.xml
@@ -76,6 +76,26 @@
               app:layout_constraintTop_toBottomOf="@+id/textView9"
               tools:ignore="TouchTargetSizeCheck" />
 
+          <TextView
+              android:id="@+id/textView5"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="10dp"
+              android:layout_marginTop="10dp"
+              android:layout_marginEnd="10dp"
+              android:text="Número de Ticket"
+              android:textStyle="bold"/>
+
+          <EditText
+              android:id="@+id/txtBuscarTicket"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="10dp"
+              android:layout_marginEnd="10dp"
+              android:drawableStart="@drawable/ic_baseline_search"
+              android:hint="Ticket"
+              android:inputType="textPersonName" />
+
           <Button
               android:id="@+id/btnBuscar"
               android:layout_width="wrap_content"
@@ -130,15 +150,15 @@
               android:id="@+id/txtTicket"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:layout_marginStart="10dp"
               android:layout_marginTop="10dp"
               android:layout_marginEnd="10dp"
-              android:layout_marginStart="10dp"
-              android:text="Ticket"
-              android:textSize="17sp"
-              android:textAlignment="center"
               android:background="@drawable/edt_background"
+              android:hint="Ticket"
+              android:textAlignment="center"
+              android:textSize="17sp"
               app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"/>
+              app:layout_constraintStart_toStartOf="parent" />
 
           <TextView
               android:id="@+id/txtMarca"
@@ -233,30 +253,6 @@
               android:textSize="17sp"
               android:background="@drawable/edt_background2"/>
 
-          <TextView
-              android:id="@+id/textView5"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginStart="10dp"
-              android:layout_marginEnd="10dp"
-              android:layout_marginTop="10dp"
-              android:text="Hora Salida"
-              android:textStyle="bold"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@+id/txtHoraEntrada" />
-
-
-          <TextView
-              android:id="@+id/txtHoraSalida"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginStart="10dp"
-              android:layout_marginEnd="10dp"
-              android:hint="Hora Salida"
-              android:textAlignment="center"
-              android:textSize="17sp"
-              android:background="@drawable/edt_background2"/>
 
           <TextView
               android:id="@+id/textView2"
