--- a/app/src/main/res/layout/activity_escanear_placa.xml
+++ b/app/src/main/res/layout/activity_escanear_placa.xml
@@ -285,13 +285,13 @@
               tools:ignore="TouchTargetSizeCheck" />
 
           <TextView
-              android:id="@+id/textView88"
+              android:id="@+id/txtviewPersona"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
-              android:layout_marginEnd="10dp"
               android:layout_marginTop="10dp"
-              android:text="ID Usuario"
+              android:layout_marginEnd="10dp"
+              android:text="&quot;&quot;"
               android:textStyle="bold"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
